<resources>
    <string name="app_name">Sound Scape</string>
    //Login interface
    <string name="title">Hi there!</string>
    <string name="subtitle">
    Discover a world of music tailored for you!
    <br><b>Login</b> if you already have an account.</br>
        <br><b>Sign up</b> to get started with the app</br> </string>
    <string name="illustartion_img">Illustgitartion image</string>
    <string name="login"><b>Login</b> </string>
    <string name="signUp"><b>SignUp</b> </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="welcome">Welcome</string>
    <string name="this_is_the_app">This is the app</string>
    <string name="logout">LOGOUT</string>
    <string name="don_t_have_an_account_signup"><b>Don\'t have an Account? <font color="#00C9BB">SignUp</font></b></string>

    <string name="edit_acc">Edit Account</string>
    //Navigation
    <string name="account">Account</string>
    <string name="exit">Exit App</string>
    <string name="add_song">Add Song</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <!--Edit navigatin-->
    <string name="play">Play</string>
    <string name="add_song_to_playlist">Add song to playlist</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="remove">Remove</string>
    <!--Search song-->
    <string name="search_song">Search song</string>
    <!--Just strings for settings -->
    <string name="night_mode">Night mode</string>
    <string name="notifications">Notificatins</string>
    <string name="security">Security and Privacy</string>
    <string name="sound_speed">Sound speed and Time limit</string>
    <string name="info">Info</string>
    <string name="send_message">Send us a message</string>
    <string name="f_a_q">Frequently asked questions</string>
    <!--feedback-->
    <string name="topic_feedback">Topic i.e. Suggestion, Error, etc.</string>
    <string name="email_feedback">Email Address (Optional)</string>
    <string name="feedback">Feedback</string>
    <string name="send">Send</string>
    <!--Playlist-->
    <string name="playlist_name">Playlist Name</string>
    <string name="song_img">Song Image</string>
    <string name="most_played">Most played</string>
    <string name="favorites">Favorites</string>
    <string name="tracks">Tracks</string>
    <!--Home layout-->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="play_list">Playlist</string>
    <!--artist and stuff-->
    <string name="song_name">Song name</string>
    <string name="start_Tv">0:00</string>
    <string name="end_Tv">Loading...</string>
    <string name="counters">0:00</string>
    <string name="artist_name">Artist Name</string>
<!--    //info-->
    <string name="info_about_us">Info about the app</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="submit">Submit</string>
    <string name="back_to_login"><font color ="#000000">Back to</font><b><font color="#00C9BB">Login</font></b></string>
    <string name="profile_image">Profile Image</string>
    <string name="change_password">Change Password</string>
    <string name="back">Back</string>
    <string name="slide">Slide</string>
    <string name="size">Size</string>
    <string name="text_size_seek_bar">Text size seek bar</string>
    <string name="info_about_the_app">Info about the app</string>
    <string name="select_image">Select Image</string>
    <string name="song_cover">Song Cover:</string>
    <string name="enter_artist_name">Enter artist name</string>
    <string name="album_name">Album Name:</string>
    <string name="enter_album_name">Enter album name</string>
    <string name="release_year">Release Year:</string>
    <string name="enter_release_year">Enter release year</string>
    <string name="genre">Genre:</string>
    <string name="enter_genre">Enter genre</string>
    <string name="enter_song_title">Enter song title</string>
    <string name="song_title">Song Title:</string>
    <string name="enter_new_playlist_name">Enter new playlist name</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recommended_songs">Recommended Songs</string>
    <string name="username_email">Username/Email</string>
    <string name="pick_your_favorite_music_genres">Pick your favorite music genres.</string>
    <string name="rock">Rock</string>
    <string name="pop">Pop</string>
    <string name="hip_pop">Hip Pop</string>
    <string name="edm">EDM</string>
    <string name="r_b"><![CDATA[R&B]]></string>
    <string name="k_pop">K-pop</string>
    <string name="soul">Soul</string>
    <string name="classical">Classical</string>
    <string name="latin">Latin</string>
    <string name="nasheed">Nasheed</string>
    <string name="finish">finish</string>
    <string name="change_username">Change Username</string>
    <string name="change_email">Change email</string>
    <string name="reset_your_username">Reset your username</string>
    <string name="new_username">New username</string>
    <string name="change_your_password">Change your password</string>
    <string name="hip_hop">Hip Hop</string>
</resources>