<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/play"
        android:icon="@drawable/play_icon"
        android:title="@string/play"/>
    <item
        android:id="@+id/add"
        android:icon="@drawable/add_to_playlist"
        android:title="@string/add_song_to_playlist"
        />
    <item
        android:id="@+id/share"
        android:icon="@drawable/share_icon"
        android:title="@string/share"
        />
    <item android:id="@+id/rename"
        android:title="@string/rename"
        android:icon="@drawable/rename_icon"/>
  <!--  <item android:id="@+id/remove"
        android:title="@string/remove"
        android:icon="@drawable/remove_icon"
        android:visible="false"
        />-->
    <item  android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/delete_icon"
        android:visible="true"/>
</menu>