<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_song"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Screen"
    android:orientation="vertical"
    tools:context=".settings.Add_song">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/getBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="#0069DCD4"
            android:contentDescription="@string/back"
            android:padding="14dp"
            android:src="@drawable/return_back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_song"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/songTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_title"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"/>

            <EditText
                android:id="@+id/songTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:inputType="text"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/enter_song_title"/>

            <TextView
                android:id="@+id/artistNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artist_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"/>

            <EditText
                android:id="@+id/artistNameEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:inputType="text"
                android:textColor="@color/white"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/enter_artist_name"/>

            <!-- Album Name -->
            <TextView
                android:id="@+id/albumLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/album_name"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"/>

            <EditText
                android:id="@+id/albumNameLabel"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:inputType="text"
                android:textColor="@color/white"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/enter_album_name"/>
            <TextView
                android:id="@+id/releaseYearLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_year"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"/>

            <EditText
                android:id="@+id/releaseYearEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/white"
                android:layout_marginEnd="16dp"
                android:inputType="number"
                android:hint="@string/enter_release_year"/>

            <TextView
                android:id="@+id/genreLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"/>

            <EditText
                android:id="@+id/genreEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:inputType="text"
                android:textColor="@color/white"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/enter_genre"/>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/selectSong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_back_add"
                android:layout_gravity="center"
                android:text="Select song"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:checked="true"
                tools:ignore="HardcodedText" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:id="@+id/songCoverLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="21dp"
                    android:text="@string/song_cover"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/selectImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/songCoverLabel"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="47dp"
                    android:layout_marginTop="-28dp"
                    android:textColor="@color/white"
                    android:layout_marginEnd="166dp"
                    android:layout_toEndOf="@+id/songCoverLabel"
                    android:background="@drawable/round_back_add"
                    android:text="@string/select_image" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_song_to_database"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_song"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:background="@drawable/round_back_add"
                android:layout_marginTop="24dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
