<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_purple"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageProfile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_circle_account"
        android:backgroundTint="@color/purple"
        android:clickable="true"
        android:contentDescription="@string/profile_image"
        android:focusable="true"
        android:scaleType="centerCrop" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/imageProfile"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/username"
        android:inputType="text" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:layout_below="@+id/editTextEmail"
        android:layout_alignStart="@+id/editTextEmail"
        android:layout_marginStart="0dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_background"
        android:text="@string/password"
        android:padding="10sp"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChangePassword"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_below="@+id/editTextEmail"
        android:layout_alignEnd="@+id/editTextEmail"
        android:layout_marginStart="46dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="-1dp"
        android:layout_toEndOf="@+id/textViewPassword"
        android:background="@android:drawable/editbox_background"
        android:text="@string/change_password" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/editTextUsername"
        android:layout_alignStart="@+id/editTextUsername"
        android:layout_marginStart="0dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_to_login"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_below="@+id/textViewPassword"
        android:layout_alignStart="@+id/textViewPassword"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="60dp"
        android:text="@string/back" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/log_out"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_below="@+id/btnChangePassword"
        android:layout_alignEnd="@+id/btnChangePassword"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="60dp"
        android:text="@string/logout" />

</RelativeLayout>