<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.password.ResetPasswordActivity">

    <TextView
        android:id="@+id/forgotPass"
        style="@style/Title"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/reset_your_password"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/reset_email"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_circle_account"
        android:drawablePadding="5dp"
        android:inputType="text"
        android:textColorHint="@color/grey"
        android:hint="@string/enter_your_email"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPass"
        tools:ignore="Autofill,TextFields" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reset_submit_button"
        style="@style/ButtonWhite"
        android:layout_width="385dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="456dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_email" />

    <TextView
        android:id="@+id/back_to_login"
        style="@style/SubTitle"
        android:layout_width="371dp"
        android:layout_height="26dp"
        android:layout_marginTop="16dp"
        android:text="@string/back_to_login"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_submit_button"
        tools:ignore="TextSizeCheck" />



</androidx.constraintlayout.widget.ConstraintLayout>